iniciamos con las practicas de boostrap

--- a/index.html
+++ b/index.html
@@ -5,41 +5,70 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
-    <div class="d-flex flex-column min-vh-100">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                 <span class="navbar-toggler-icon"></span>
-               </button>
-                <a class="navbar-brand" href="#">Boostrap demo</a>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled">Disabled</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <h1>Hello, world!</h1>
-        <footer class="bg-info mt-auto">
-            <div class="container">
-                Footer
-            </div>
-        </footer>
-    </div>
+    <h1>Boostrap5</h1>
+    <h2>Color</h2>
+    <p>Boostrap ya incluye una serie de colores, entre los que estan:
+        <span class="bg-primary text-light">Primari</span>,
+        <span class="bg-secondary text-light">Secondary</span>,
+        <span class="bg-success text-light">Succes</span>,
+        <span class="bg-danger text-light">Darger</span>,
+        <span class="bg-warning text-dark">Warning</span>,
+        <span class="bg-info text-dark">Info</span>,
+        <span class="bg-dark text-light">Dark</span> y
+        <span class="bg-light text-primary">Light</span>
+    </p>
+    <p>Puedo combinarlos como quiera y puedo tambien customizarlos, si quiero cambiear el color del texto utilizo la clase text-(color) y para fondos bg-(color)</p>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <h2>Display</h2>
+    <p>Tengo la clase d-(display) para poder editar el tipo de display, por ejemplo:</p>
+
+    <div class="d-inline">Inline</div>
+    <div class="d-inline-block">Inline-Block</div>
+    <div class="d-block">Block</div>
+    <div class="d-flex">Flex</div>
+    <div class="d-none">None</div>
+
+    <h2>Container</h2>
+    <p>Los container son muy utilizados, le da (por ejemplo) a los div ciertas caracteristicas responsive basados en flex</p>
+    <div class="container">
+        <div class="border border-2 border-dark">div con classe container</div>
+    </div>
+    <div class="container-fluid">
+        <div class="border border-2 border-dark">div con classe container fluid</div>
+    </div>
+    <h2>Margin y Padding</h2>
+
+    <h2>Borders</h2>
+
+    <h2>typografi</h2>
+
+    <h2>responsive</h2>
+
+    <h2>sizing</h2>
+
+    <h2>flex</h2>
+
+    <h2>grid</h2>
+
+    <h2>navbar</h2>
+
+    <h2>carousel</h2>
+
+    <h2>buttons</h2>
+
+    <h2>card</h2>
+
+    <h2>modal</h2>
+
+    <h2>forms</h2>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
