--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/correctivo.css">
 </head>
 
 <body>
-    <h1>Boostrap5</h1>
-    <h2>Color</h2>
+
+    <div class="container-fluid py-3 px-1 bg-primary text-center text-light mb-3">
+        <h1>Boostrap5</h1>
+    </div>
+    <div class="bg-secondary text-light m-3 px-3 py-2 mx-1 rounded-pill">
+        <h2>Color</h2>
+    </div>
     <p>Boostrap ya incluye una serie de colores, entre los que estan:
         <span class="bg-primary text-light">Primari</span>,
         <span class="bg-secondary text-light">Secondary</span>,
@@ -23,7 +29,9 @@
     </p>
     <p>Puedo combinarlos como quiera y puedo tambien customizarlos, si quiero cambiear el color del texto utilizo la clase text-(color) y para fondos bg-(color)</p>
 
-    <h2>Display</h2>
+    <div class="bg-secondary text-light m-3 px-3 py-2 mx-1 rounded-pill">
+        <h2>Display</h2>
+    </div>
     <p>Tengo la clase d-(display) para poder editar el tipo de display, por ejemplo:</p>
 
     <div class="d-inline">Inline</div>
@@ -32,7 +40,9 @@
     <div class="d-flex">Flex</div>
     <div class="d-none">None</div>
 
-    <h2>Container</h2>
+    <div class="bg-secondary text-light m-3 px-3 py-2 mx-1 rounded-pill">
+        <h2>Container</h2>
+    </div>
     <p>Los container son muy utilizados, le da (por ejemplo) a los div ciertas caracteristicas responsive basados en flex</p>
     <div class="container">
         <div class="border border-2 border-dark">div con classe container</div>
@@ -40,13 +50,71 @@
     <div class="container-fluid">
         <div class="border border-2 border-dark">div con classe container fluid</div>
     </div>
-    <h2>Margin y Padding</h2>
+    <div class="bg-secondary text-light m-3 px-3 py-2 mx-1 rounded-pill">
+        <h2>Margin y Padding</h2>
+    </div>
+    <p>Las clases que empizan con m- y p- son de margin y padding respectivamente, los "pasos" varian entre .25, .5, 1, 1.5, 3.</p>
 
-    <h2>Borders</h2>
+    <div class="border border-2 border-dark mt-0 ms-3 me-1 mb-2">Esto es un div con margin en distintos lados </div>
 
-    <h2>typografi</h2>
+    <div class="border border-2 border-dark p-5">Esto es un div con padding 5 (3rem/48px)</div>
 
-    <h2>responsive</h2>
+    <div class="border border-2 border-dark m-5">Esto es un div con margin 5 (3rem/48px)</div>
+
+    <div class="border border-2 border-dark pt-3">Esto es un div con padding 3 arriba (1rem/16px)</div>
+
+    <div class="bg-secondary text-light m-3 px-3 py-2 mx-1 rounded-pill">
+        <h2>Borders</h2>
+    </div>
+    <p>puedo controlar los bordes con las clases border, border-(lado) y border-(color). recordar que primero debo aplicar el border o border-(lado)</p>
+
+    <div class="border border-primary border-2 mb-2"> Este div tiene la clase border, color primary, y es de 2px</div>
+
+    <div class="border border-danger border-2 rounded-2 mx-1 p-2"> Este div tiene la clase border, color primary, y es de 2px</div>
+
+    <div class="bg-secondary text-light m-3 px-3 py-2 mx-1 rounded-pill">
+        <h2>typografi</h2>
+    </div>
+
+    <p>los headings o h ya vienen predifinidos en BS, igual yo podria pisarlos con mi propio css.</p>
+
+    <h1>h1. Bootstrap heading</h1>
+    <h2>h2. Bootstrap heading</h2>
+    <h3>h3. Bootstrap heading</h3>
+    <h4>h4. Bootstrap heading</h4>
+    <h5>h5. Bootstrap heading</h5>
+    <h6>h6. Bootstrap heading</h6>
+
+    <p>Puedo hacer que un p se vea como un h utilizando las clases de h1, h2, etc etc</p>
+
+    <p class="h1">h1. Bootstrap heading</p>
+    <p class="h2">h2. Bootstrap heading</p>
+    <p class="h3">h3. Bootstrap heading</p>
+    <p class="h4">h4. Bootstrap heading</p>
+    <p class="h5">h5. Bootstrap heading</p>
+    <p class="h6">h6. Bootstrap heading</p>
+
+    <p>tambien puedo utilizar la clase text-muted para poner un texto en color menos intenso</p>
+
+    <p>este texto tiene una palabra <span class="text-muted">muteada</span></p>
+
+    <p>puedo utilizar display para que el texto se vea mas o menos grande</p>
+
+    <h1 class="display-1">Display 1</h1>
+    <h1 class="display-2">Display 2</h1>
+    <h1 class="display-3">Display 3</h1>
+    <h1 class="display-4">Display 4</h1>
+    <h1 class="display-5">Display 5</h1>
+    <h1 class="display-6">Display 6</h1>
+
+    <p>usando las clases text-(alineacion) puedo alinear el texto</p>
+
+    <p class="text-center">este texto esta centrado</p>
+    <p class="text-end"> este texto esta al final</p>
+
+    <div class="bg-secondary text-light m-3 px-3 py-2 mx-1 rounded-pill">
+        <h2>responsive</h2>
+    </div>
 
     <h2>sizing</h2>
 
